Desktop and mobile cleanup, geoPosition.js added back

--- a/aircanary/places/templates/places/desktop.html
+++ b/aircanary/places/templates/places/desktop.html
@@ -53,7 +53,7 @@
                         <div style="width: 15px; height: 15px; float: left" class="legend-box aqi-yellow" data-toggle="tooltip" data-placement="top" title="Moderate"></div>
                         <div style="width: 15px; height: 15px; float: left" class="legend-box aqi-orange" data-toggle="tooltip" data-placement="top" title="Unhealthy for Sensitive Groups"></div>
                         <div style="width: 15px; height: 15px; float: left" class="legend-box aqi-red" data-toggle="tooltip" data-placement="top" title="Unhealthy"></div>
-                        <div style="width: 15px; height: 15px; float: left" class="legend-box aqi-purple" data-toggle="tooltip" data-placement="top" title="Very Unhealth"></div>
+                        <div style="width: 15px; height: 15px; float: left" class="legend-box aqi-purple" data-toggle="tooltip" data-placement="top" title="Very Unhealthy"></div>
                         <div style="width: 15px; height: 15px; float: left" class="legend-box aqi-maroon" data-toggle="tooltip" data-placement="top" title="Hazardous"></div>
                     </div>
                 </div>
