--- a/aircanary/places/templates/places/base_desktop.html
+++ b/aircanary/places/templates/places/base_desktop.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}"/>
     <link href="{% static "css/main.css" %}" rel="stylesheet" media="screen"/>
     <link href="{% static "css/climacons-font.css" %}" rel="stylesheet" media="screen"/>
+    <script src="{% static "js/geoPosition.js" %}"></script>
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
@@ -34,7 +35,10 @@
             <div class="input-group">
                 <input type="text" id="srch" name="srch" value="{{ srch }}"  class="form-control input-sm" placeholder="Choose location">
                 <span class="input-group-btn">
-                    <button id=srchButton" class="btn btn-default btn-sm" type="button"><span id="srchButtonSpan" class="glyphicon glyphicon-search" style="color: #666"></span></button>
+                    <button id="srchButton" class="btn btn-default btn-sm" type="button"><span id="srchButtonSpan" class="glyphicon glyphicon-search" style="color: #666"></span></button>
+                </span>
+                <span class="input-group-btn">
+                    <button id="hereButton" class="btn btn-default btn-sm" type="button"><span id="hereButtonSpan" class="glyphicon glyphicon-screenshot" style="color: #666"></span></button>
                 </span>
             </div>
             </form>
@@ -69,11 +73,41 @@
 </div>
 
 <script>
+
+function geoPositionSuccess(p) {
+    // p.latitude
+    // p.longitude
+    console.log(p);
+    window.location.href = '?lat=' + p.coords.latitude + '&lon=' + p.coords.longitude;
+}
+
+function geoPositionFailure(p) {
+    // p.message
+    console.log(p);
+}
+
 $(function() {
     $('.legend-box').tooltip();
 
-    $('#srchButtonSpan').on('click', function() {
+    //$('#srchButtonSpan').on('click', function() {
+    $('body').on('click', '#srchButton', function() {
         $('#srchForm').submit();
+    });
+
+    //$('#hereButtonSpan').on('click', function() {
+    $('body').on('click', '#hereButton', function(event) {
+
+        console.log('Here button clicked');
+        if (geoPosition.init()) {  // Geolocation Initialisation
+
+            console.log('Getting current position');
+            geoPosition.getCurrentPosition(geoPositionSuccess, geoPositionFailure, {enableHighAccuracy: true});
+
+        } else {
+
+            console.log('Unable to use geolocation on this device');
+
+        }
     });
 });
 </script>
