--- a/aircanary/places/templates/places/base.html
+++ b/aircanary/places/templates/places/base.html
@@ -1,1 +1,166 @@
-<html>
+{% load staticfiles %}
+{% load place_extras %}
+<!DOCTYPE html>
+<html style="height: 100%">
+<head>
+    <title>Air Canary</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}"/>
+    <link href="{% static "css/main.css" %}" rel="stylesheet" media="screen"/>
+    <link href="{% static "css/climacons-font.css" %}" rel="stylesheet" media="screen"/>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="{% static "js/geoPosition.js" %}"></script>
+    <link href="{% static "css/ladda-themeless.min.css" %}" rel="stylesheet"/>
+    <script src="{% static "js/spin.min.js" %}"></script>
+    <script src="{% static "js/ladda.min.js" %}"></script>
+
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
+    <style>
+        * { color: #333 }
+        .vcontainer { display: table !important; height: 100% }
+        .vcontent { display: table-cell; vertical-align: middle; height: 100% }
+        .rounded-border { border: 1px solid #60bd22; padding: 3px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+    </style>
+</head>
+<body style="height: 100%; background: #eee">
+
+<div class="container" style="background: #fff">
+    <div class="row" style="color: #333; padding: 5px">
+        <div class="col-xs-3 col-md-3">
+            <div style="text-align: center; color: #333; padding-top: 3px; font-size: 130%"><a href="/" style="text-decoration: none"><strong style="color: #333">Air</strong><span style="color: #60bd22">C</span><span style="color: #f4bd00">a</span><span style="color: #f69721">n</span><span style="color: #c44812">a</span><span style="color: #980046">r</span><span style="color: #7c0020">y</span></a></div>
+        </div>
+        <div class="col-xs-7 col-md-3" style="color: #333">
+            <form action="/d" method="get" id="srchForm">
+            <div class="input-group">
+                <input type="text" id="srch" name="srch" value="{{ srch }}"  class="form-control input-sm" placeholder="Choose location">
+                <span class="input-group-btn">
+                    <button id="srchButton" class="btn btn-default btn-sm" type="button"><span id="srchButtonSpan" class="glyphicon glyphicon-search" style="color: #666"></span></button>
+                </span>
+                <span class="input-group-btn">
+                    <button id="hereButton" class="btn btn-default btn-sm ladda-button" type="button" data-style="slide-up" data-spinner-color="#000000" data-size="xs"><span id="hereButtonSpan" class="glyphicon glyphicon-screenshot ladda-label" style="color: #666"></span></button>
+                </span>
+            </div>
+            </form>
+        </div>
+        <div class="col-xs-2 col-md-6" style="color: #333; text-align: right; padding-top: 5px"><a href="#" data-toggle="modal" data-target="#myModal"><small style="color: #333">About</small></a></div>
+    </div>
+</div>
+
+{% block content %}
+
+{% endblock %}
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel" style="color: #333">About AirCanary.com</h4>
+      </div>
+      <div class="modal-body" style="color: #333">
+        <p style="color: #333">
+            AirCanary.com displays real-time air quality data and forecasts for the continental United States.
+            We are currently in open beta.
+        </p>
+        <p>
+            These data are provided obtained via the <a href="http://airnowapi.org" target="_blank">AirNow data API</a> and is considered preliminary and subject to change.
+        </p>
+        <p style="color: #333">
+            Feel free to send feedback and suggestions to jonstjohn - at - gmail.
+        </p>
+
+        <p>Values for PM<sub>2.5</sub> and ozone are expressed in AQI (Air Quality Index).</p>
+
+        <div style="margin-top: 10px">
+            <div style="padding: 5px; color: #fff; text-align: center" class="aqi-green" data-toggle="tooltip" data-placement="top" title="Good">0-50 Good</div>
+            <div style="padding: 5px; color: #fff; text-align: center" class="aqi-yellow" data-toggle="tooltip" data-placement="top" title="Moderate">51-100 Moderate</div>
+            <div style="padding: 5px; color: #fff; text-align: center" class="aqi-orange" data-toggle="tooltip" data-placement="top" title="Unhealthy for Sensitive Groups">101-150 Unhealthy for Sensitive Groups</div>
+            <div style="padding: 5px; color: #fff; text-align: center" class="aqi-red" data-toggle="tooltip" data-placement="top" title="Unhealthy">151-200 Unhealthy</div>
+            <div style="padding: 5px; color: #fff; text-align: center" class="aqi-purple" data-toggle="tooltip" data-placement="top" title="Very Unhealthy">201-300 Very Unhealthy</div>
+            <div style="padding: 5px; color: #fff; text-align: center" class="aqi-maroon" data-toggle="tooltip" data-placement="top" title="Hazardous">301-500 Hazardous</div>
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="pleaseWaitDialog" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel" style="color: #333">Loading current location ...</h1>
+            </div>
+            <div class="modal-body">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+
+function geoPositionSuccess(p) {
+    console.log(p);
+    window.location.href = '?lat=' + p.coords.latitude + '&lon=' + p.coords.longitude;
+    l.stop();
+}
+
+function geoPositionFailure(p) {
+    console.log(p);
+    l.stop();
+}
+
+$(function() {
+    $('.legend-box').tooltip();
+
+    $('body').on('click', '#srchButton', function() {
+        $('#srchForm').submit();
+    });
+
+    var l = Ladda.bind('#hereButton');
+
+    $('body').on('click', '#hereButton', function(event) {
+
+        console.log('Here button clicked');
+        //$('#pleaseWaitDialog').modal('show');
+        if (geoPosition.init()) {  // Geolocation Initialisation
+
+            console.log('Getting current position');
+            geoPosition.getCurrentPosition(geoPositionSuccess, geoPositionFailure, {enableHighAccuracy: true});
+
+        } else {
+
+            console.log('Unable to use geolocation on this device');
+            l.stop();
+
+        }
+    });
+});
+
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56542512-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
+</html>
+
