--- a/aircanary/places/templates/places/base_desktop.html
+++ b/aircanary/places/templates/places/base_desktop.html
@@ -16,13 +16,13 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <style>
-        * { color: #fff }
+        * { color: #333 }
         .vcontainer { display: table !important; height: 100% }
         .vcontent { display: table-cell; vertical-align: middle; height: 100% }
         .rounded-border { border: 1px solid #60bd22; padding: 3px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
     </style>
 </head>
-<body style="background: #eee">
+<body style="background: #eee; height: 100%">
 
 
 <div class="container" style="background: #fff">
@@ -110,6 +110,17 @@ $(function() {
         }
     });
 });
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56542512-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 
 </body>
