--- a/aircanary/places/templates/places/desktop.html
+++ b/aircanary/places/templates/places/desktop.html
@@ -1,4 +1,4 @@
-{% extends 'places/base_desktop.html' %}
+{% extends 'places/base.html' %}
 
 {% load staticfiles %}
 {% load place_extras %}
@@ -10,26 +10,26 @@
             <div class="row">
                 <div class="col-xs-5" style="text-align: right">
                     <!-- Climacon -->
-                    <span class="fs1 climacon {{ place.icon_class }}" style="font-size: 13em; padding-left: 20px; margin-bottom: -100px; display: inline-block" aria-hidden="true"></span>
+                    <span class="fs1 climacon {{ place.icon_class }}" style="font-size: 13em; padding-left: 20px; margin-bottom: -100px; display: inline-block; color: #fff" aria-hidden="true"></span>
                 </div>
                 <div class="col-xs-7" style="padding-top: 30px">
                     <!-- currently -->
                     <div style="text-align:right; color: #eee">Currently</div>
-                    <div style="text-align: right; font-size: 1.8em">{{ place.name }}</div>
+                    <div style="text-align: right; font-size: 1.8em; color: #fff">{{ place.name }}</div>
                     <div style="text-align: right">
-                        <span style="font-size: 3em">{% if place.temperature %}{{ place.temperature }}&deg;{% endif %}</span>
-                        <span style="font-size: 1.1em; width: 65px; display: inline-block; text-tranform: uppercase">{% if place.summary %}{{ place.summary|space2br }}{% endif %}</span>
+                        <span style="font-size: 3em; color: #fff">{% if place.temperature %}{{ place.temperature }}&deg;{% endif %}</span>
+                        <span style="font-size: 1.1em; width: 65px; display: inline-block; text-tranform: uppercase; color: #fff">{% if place.summary %}{{ place.summary|space2br }}{% endif %}</span>
                     </div>
                     <div class="row">
                         <div class="col-xs-2">&nbsp;</div>
                         <div class="col-xs-5 vcontainer {{ place.combined.css }}-dark" style="padding: 5px; text-align: center">
                             <div class="vcontent">
-                                <div>PM2.5 <span class="rounded-border {{ place.pm25.css }}-border">{{ place.pm25.value }}</span></div>
+                                <div style="color: #fff">PM<sub style="color: #fff">2.5</sub> <span class="rounded-border {{ place.pm25.css }}-border legend-box" style="color: #fff" data-toggle="tooltip" data-placement="top" title="Air Quality Index (AQI)">{{ place.pm25.value }}</span></div>
                             </div>
                         </div>
                         <div class="col-xs-5 vcontainer {{ place.combined.css }}-dark" style="padding: 5px; text-align: center">
                             <div class="vcontent">
-                                <div>Ozone <span class="rounded-border {{ place.ozone.css }}-border">{{ place.ozone.value }}</span></div>
+                                <div style="color: #fff">Ozone <span class="rounded-border {{ place.ozone.css }}-border legend-box" style="color: #fff" data-toggle="tooltip" data-placement="top" title="Air Quality Index (AQI)">{{ place.ozone.value }}</span></div>
                             </div>
                         </div>
                     </div>
@@ -39,11 +39,11 @@
         <div class="col-xs-6" style="padding-top: 30px">
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-3"></div>
-                <div class="col-xs-6 {{ place.today.css }}-light" style="padding: 20px; text-align: center">Today</div>
+                <div class="col-xs-6 {{ place.today.css }}-light" style="padding: 20px; text-align: center; color: #fff">Today</div>
             </div>
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-3"></div>
-                <div class="col-xs-6 {{ place.tomorrow.css }}-light" style="padding: 20px; text-align: center">Tomorrow</div>
+                <div class="col-xs-6 {{ place.tomorrow.css }}-light" style="padding: 20px; text-align: center; color: #fff">Tomorrow</div>
             </div>
             <div class="row">
                 <div class="col-xs-3"></div>
