--- a/aircanary/places/templates/places/mobile.html
+++ b/aircanary/places/templates/places/mobile.html
@@ -1,66 +1,24 @@
+{% extends 'places/base.html' %}
+
 {% load staticfiles %}
 {% load place_extras %}
-<!DOCTYPE html>
-<html style="height: 100%">
-<head>
-    <title>Air Canary</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}"/>
-    <link href="{% static "css/main.css" %}" rel="stylesheet" media="screen"/> 
-    <link href="{% static "css/climacons-font.css" %}" rel="stylesheet" media="screen"/>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="{% static "js/geoPosition.js" %}"></script>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
-    <style>
-        * { color: #fff }
-        .vcontainer { display: table !important; height: 100% }
-        .vcontent { display: table-cell; vertical-align: middle; height: 100% }
-        .rounded-border { border: 1px solid #60bd22; padding: 3px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
-    </style>
-</head>
-<body class="{{ place.combined.css }}" style="height: 100%; background: #eee">
-
-<div class="container" style="background: #fff">
-    <div class="row" style="color: #333; padding: 10px">
-        <div class="col-xs-3">
-            <div style="text-align: center; color: #333; padding-top: 5px"><strong style="color: #333">Air</strong><span style="color: #60bd22">C</span><span style="color: #f4bd00">a</span><span style="color: #f69721">n</span><span style="color: #c44812">a</span><span style="color: #980046">r</span><span style="color: #7c0020">y</span></div>
-        </div>
-        <div class="col-xs-7" style="color: #333">
-            <form action="/m" method="get" id="srchForm">
-            <div class="input-group">
-                <input type="text" id="srch" name="srch" value="{{ srch }}"  class="form-control input-sm" placeholder="Choose location">
-                <span class="input-group-btn">
-                    <button id=srchButton" class="btn btn-default btn-sm" type="button"><span id="srchButtonSpan" class="glyphicon glyphicon-search" style="color: #666"></span></button>
-                </span>
-                <span class="input-group-btn">
-                    <button id="hereButton" class="btn btn-default btn-sm" type="button"><span id="hereButtonSpan" class="glyphicon glyphicon-screenshot" style="color: #666"></span></button>
-                </span>
-            </div>
-            </form>
-        </div>
-        <div class="col-xs-2" style="color: #333; text-align: right; padding-top: 5px"><a href="#" data-toggle="modal" data-target="#myModal"><small style="color: #333">About</small></a></div>
-    </div>
-</div>
-
+{% block content %}
 <div class="container" style="height: 89%">
     <div class="row {{ place.combined.css }}" style="height: 48%">
         <div class="col-xs-12">
-            <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Currently</div>
+            <div class="row" style="padding: 20px 0 0 20px; color: #eee; font-size: 120%">Currently</div>
             <div class="row" style="padding: 0">
-                <div class="col-xs-5"><span class="fs1 climacon {{ place.icon_class }}" style="font-size: 7em; padding-left: 20px" aria-hidden="true"></span></div>
+                <div class="col-xs-5"><span class="fs1 climacon {{ place.icon_class }}" style="font-size: 10em; margin-bottom: -100px; display: inline-block; padding-left: 20px; color: #fff" aria-hidden="true"></span></div>
                 <div class="col-xs-7">
                     <div class="row">&nbsp;</div>
                     <div class="row" style="font-size: 120%">
-                        <div class="col-xs-12 text-right">{{ place.name|slice:":25" }}</div>
+                        <div class="col-xs-12 text-right" style="color: #fff">{{ place.name|slice:":25" }}</div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 text-right">
-                            <div class="text-right" style="font-size: 125%; padding-right: 0; padding-top: 5px; float: right; position:relative">{{ place.summary|space2br }}</div>
-                            <div class="text-right" style="font-size: 310%; padding-right: 10px; float: right; position:relative">{{ place.temperature }}&deg;</div>
+                            <div class="text-right" style="font-size: 125%; padding-right: 0; padding-top: 5px; float: right; position:relative; color: #fff">{{ place.summary|space2br }}</div>
+                            <div class="text-right" style="font-size: 310%; padding-right: 10px; float: right; position:relative; color: #fff">{{ place.temperature }}&deg;</div>
                         </div>
                     </div>
                 </div>
@@ -72,12 +30,12 @@
             <div class="row" style="height: 100%; font-size: 1.1em">
                 <div class="col-xs-6 vcontainer">
                     <div class="vcontent">
-                        <div style="text-align: center">PM2.5 <span class="rounded-border">{{ place.pm25.value }}</span></div>
+                        <div style="text-align: center; color: #fff">PM<sub style="color: #fff">2.5</sub> <span class="rounded-border legend-box" style="color: #fff" data-toggle="tooltip" data-placement="top" title="Air Quality Index (AQI)">{{ place.pm25.value }}</span></div>
                     </div>
                 </div>
                 <div class="col-xs-6 vcontainer">
                     <div class="vcontent">
-                        <div style="text-align: center">Ozone <span class="rounded-border">{{ place.ozone.value }}</span></div>
+                        <div style="text-align: center; color: #fff">Ozone <span class="rounded-border legend-box" style="color: #fff" data-toggle="tooltip" data-placement="top" title="Air Quality Index (AQI)">{{ place.ozone.value }}</span></div>
                     </div>
                 </div>
                 <!--
@@ -93,94 +51,21 @@
             </div>
         </div>
     </div>
-    <div class="row {{ place.today.css }}" style="height: 20%; border-bottom: 1px solid #333">
+    <div class="row {{ place.today.css }}" style="height: 21%; border-bottom: 1px solid #333">
         <div class="col-xs-6 vcontainer">
-            <div class="vcontent" style="font-size: 150%">Today</div>
+            <div class="vcontent" style="font-size: 150%; color: #fff">Today</div>
         </div>
         <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">{{ place.today.label }}</div>
+            <div class="vcontent" style="color: #fff">{{ place.today.label }}</div>
         </div>
     </div>
-    <div class="row {{ place.tomorrow.css }}" style="height: 20%">
+    <div class="row {{ place.tomorrow.css }}" style="height: 21%">
         <div class="col-xs-6 vcontainer">
-            <div class="vcontent" style="font-size: 150%">Tomorrow</div>
+            <div class="vcontent" style="font-size: 150%; color: #fff">Tomorrow</div>
         </div>
         <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">{{ place.tomorrow.label }}</div>
+            <div class="vcontent" style="color: #fff">{{ place.tomorrow.label }}</div>
         </div>
     </div>
 </div>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel" style="color: #333">About AirCanary.com</h4>
-      </div>
-      <div class="modal-body" style="color: #333">
-        <p style="color: #333">AirCanary.com displays real-time air quality data from the <a href="http://airnowapi.org" target="_blank">AirNow data API</a>.  Air quality data presented is preliminary data and may be subject to change.</p>
-        <p style="color: #333">AirCanary.com is currently in an open beta.  The site has been designed to give location-specific air quality data and forecasts for the United States.</p>
-
-        <p style="color: #333">Feel free to send feedback and suggestions to jonstjohn - at - gmail.</p>
-
-        <div style="margin: 10px 0 10px 0; height: 50px">
-            <div style="width: 50px; height: 50px; float: left" class="legend-box aqi-green" data-toggle="tooltip" data-placement="top" title="Good"></div>
-            <div style="width: 50px; height: 50px; float: left" class="legend-box aqi-yellow" data-toggle="tooltip" data-placement="top" title="Moderate"></div>
-            <div style="width: 50px; height: 50px; float: left" class="legend-box aqi-orange" data-toggle="tooltip" data-placement="top" title="Unhealthy for Sensitive Groups"></div>
-            <div style="width: 50px; height: 50px; float: left" class="legend-box aqi-red" data-toggle="tooltip" data-placement="top" title="Unhealthy"></div>
-            <div style="width: 50px; height: 50px; float: left" class="legend-box aqi-purple" data-toggle="tooltip" data-placement="top" title="Very Unhealthy"></div>
-            <div style="width: 50px; height: 50px; float: left" class="legend-box aqi-maroon" data-toggle="tooltip" data-placement="top" title="Hazardous"></div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script>
-
-function geoPositionSuccess(p) {
-    // p.latitude
-    // p.longitude
-    console.log(p);
-    window.location.href = '?lat=' + p.coords.latitude + '&lon=' + p.coords.longitude;
-}
-
-function geoPositionFailure(p) {
-    // p.message
-    console.log(p);
-}
-
-$(function() {
-    $('.legend-box').tooltip();
-
-    $('#srchButtonSpan').on('click', function() {
-    //$('body').on('click', '#srchButton', function() {
-        $('#srchForm').submit();
-    });
-
-    $('#hereButtonSpan').on('click', function() {
-    //$('body').on('click', '#hereButton', function(event) {
-
-        console.log('Here button clicked');
-        if (geoPosition.init()) {  // Geolocation Initialisation
-
-            console.log('Getting current position');
-            geoPosition.getCurrentPosition(geoPositionSuccess, geoPositionFailure, {enableHighAccuracy: true});
-
-        } else {
-
-            console.log('Unable to use geolocation on this device');
-
-        }
-    });
-});
-
-</script>
-
-</body>
-</html>
+{% endblock %}
